--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "parcial_final",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://fideldavid11.github.io/ELECTIVAFINAL/",
   "dependencies": {
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
@@ -13,7 +14,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": ".\\node_modules\\.bin\\gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,6 +39,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.1",
+    "gh-pages": "^3.2.3",
     "tailwindcss": "^3.4.3"
   }
 }
